# feed_watchdog

./: .dockerignore  .env.template  .gitignore  CHANGE_TEMPLATE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ci.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  handlers.example.yaml  manage.py  pyproject.toml  settings.py  setup.cfg  urls.py
.github/: dependabot.yml
.github/workflows/: workflow-ci.yml  workflow-deploy.yml  workflow-docker.yml
backend/: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ci.sh  createUser.js  docker-compose.yml  fw_handlers_conf.example.yaml  fw_handlers_conf.yaml  pyproject.toml  setup.cfg  workspace.toml
backend/bases/feed_watchdog/rest_api/: auth.py  container.py  core.py  dependencies.py  errors.py  run_command.py  settings.py
backend/bases/feed_watchdog/rest_api/commands/: collectstatic.py  create_access_token.py  create_user.py  migrate.py
backend/bases/feed_watchdog/rest_api/routers/: __init__.py  core.py  processor.py  receiver.py  source.py  stream.py  user.py
backend/bases/feed_watchdog/workers/: container.py  dependencies.py  run_worker.py  settings.py
backend/bases/feed_watchdog/workers/workers/: fetch_posts_from_streams.py  publish_streams_by_schedule.py  send_messages.py  send_parsed_posts.py
backend/components/feed_watchdog/api_client/: client.py
backend/components/feed_watchdog/commands/: core.py
backend/components/feed_watchdog/domain/: events.py  interfaces.py  models.py
backend/components/feed_watchdog/fetchers/: stream.py
backend/components/feed_watchdog/handlers/: __init__.py  configuration.py
backend/components/feed_watchdog/handlers/fetchers/: fetch_text.py
backend/components/feed_watchdog/handlers/modifiers/: comparison.py  replace.py
backend/components/feed_watchdog/handlers/parsers/: reddit_json.py  rss.py
backend/components/feed_watchdog/handlers/receivers/: telegram_bot.py
backend/components/feed_watchdog/http/: __init__.py  core.py
backend/components/feed_watchdog/migrations/: mongo.py  sqlite.py
backend/components/feed_watchdog/pubsub/: publisher.py  subscriber.py
backend/components/feed_watchdog/repositories/: exceptions.py  post.py  processor.py  receiver.py  source.py  stream.py  user.py
backend/components/feed_watchdog/sentry/: error_tracking.py  setup.py
backend/components/feed_watchdog/synchronize/: lock.py
backend/components/feed_watchdog/text/: __init__.py  core.py
backend/components/feed_watchdog/utils/: security.py
backend/development/: experiments.py  mock_feed_server.py  send_stream_event.py
backend/projects/feed_watchdog_api/: Dockerfile  README.md  pyproject.toml
backend/test/bases/feed_watchdog/commands/: test_core.py
backend/test/bases/feed_watchdog/fastapi_rest/: test_core.py
backend/test/bases/feed_watchdog/worker/: test_core.py
backend/test/bases/feed_watchdog/workers/: test_core.py
backend/test/components/feed_watchdog/api_client/: test_core.py
backend/test/components/feed_watchdog/text/: test_core.py
backend/tests/: conftest.py
backend/tests/bases/feed_watchdog/rest_api/: conftest.py  test_login.py
backend/tests/components/feed_watchdog/sentry/: test_setup.py  test_write_warn_message.py
backend/tests/components/feed_watchdog/text/: test_make_hash_tags.py  test_template_to_text.py
backend/tests/components/feed_watchdog/utils/: test_security.py
backend/tests/development/: test_mock_feed_server.py  test_send_stream_event.py
db/: admin.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
domain/: models.py
feed_watchdog/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/feed_watchdog_admin/: README.md  package-lock.json  package.json
frontend/feed_watchdog_admin/src/: App.vue  main.js  router.js  validation.js
frontend/feed_watchdog_admin_ts/: .eslintrc.js  package-lock.json
frontend/feed_watchdog_admin_ts/src/: main.ts  router.ts  validation.ts
frontend/public/: index.html
frontend/src/: App.vue  auth.ts  errors.ts  main.ts  router.ts  validation.ts
frontend/src/components/: CreateSourceForm.vue  Form404.vue  JsonField.vue  LeftSideBar.vue  ListSourceForm.vue  ProgressContainer.vue  SaveSourceForm.vue  UpdateSourceForm.vue
frontend/src/composables/: source.ts  useForm.ts  usePagination.ts  useReceivers.ts  useSources.ts  useStreams.ts  useURL.ts
frontend/src/config/: index.ts  loader.ts
frontend/src/layouts/: Admin.vue  Empty.vue
frontend/src/stores/: dialog.ts
frontend/src/types/: ListResource.ts  error.ts  receiver.ts  source.ts  stream.ts
frontend/src/utils/: case.ts  debounce.ts  pageNavigation.ts  slug.ts
frontend/src/views/: Home.vue
processors/: service_layer.py
processors/adapters/: fetch.py
processors/domain/: events.py
processors/handlers/: __init__.py
server/: app_settings.py  asgi.py  auth.py  container.py  create_streams.py  main.py  manage.py  migrations.py  settings.py  wsgi.py
server/adapters/: fetchers.py  mongo.py  publisher.py  sentry.py  streams.py
server/adapters/repositories/: processor.py  receiver.py  source.py  stream.py  user.py
server/api/: errors.py  exceptions.py
server/api/routers/: __init__.py  core.py  processor.py  receiver.py  source.py  stream.py  user.py
server/commands/: collectstatic.py  core.py  create_access_token.py  create_user.py
server/db/: admin.py  apps.py  models.py
server/db/migrations/: 0001_initial.py  0002_remove_receiver_recipient_receiver_options.py  0003_source_parser_options.py  0004_source_fetcher_options_source_fetcher_type.py  0005_move_url_to_options.py  0007_filter_streamfilter.py  (+6 more)
server/domain/: events.py  interfaces.py  models.py
server/processors/: __main__.py  handlers.yaml  service_layer.py  settings.py  storage.py
server/scripts/: create_access_token.py  create_user.py
server/service_layer/: collector.py
server/tests/: conftest.py
server/workers/: __init__.py  core.py  scheduler.py
service_layer/: collector.py
tests/example/: test_example.py
(+55 files in other folders)
