[tool.poetry]
name = "feed_watchdog"
version = "0.1.0"
description = "Feed watchdog web service"
authors = ["yakimka <ss.yakim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yakimka/feed_watchdog"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "development"},
    {include = "feed_watchdog/rest_api", from = "bases"},
    {include = "feed_watchdog/workers", from = "bases"},
    {include = "feed_watchdog/api_client", from = "components"},
    {include = "feed_watchdog/commands", from = "components"},
    {include = "feed_watchdog/domain", from = "components"},
    {include = "feed_watchdog/fetchers", from = "components"},
    {include = "feed_watchdog/handlers", from = "components"},
    {include = "feed_watchdog/http", from = "components"},
    {include = "feed_watchdog/migrations", from = "components"},
    {include = "feed_watchdog/pubsub", from = "components"},
    {include = "feed_watchdog/repositories", from = "components"},
    {include = "feed_watchdog/sentry", from = "components"},
    {include = "feed_watchdog/synchronize", from = "components"},
    {include = "feed_watchdog/utils", from = "components"},
]

[tool.poetry.dependencies]
python = "^3.10"

aiogram = {version = "^2.20"}
APScheduler = "^3.10.4"
async-timeout = {version = "^4.0.2"}
dacite = "^1.8.0"
fastapi = "^0.111.0"
feedparser = {version = "^6.0.10"}
httpx = {version = "^0.27.0"}
mongodex = "^0.0.1"
motor = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
picodi = "^0.21.0"
pydantic-settings = "^2.0.2"
python-decouple = "^3.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
PyYAML = {version = "^6.0"}
redis = "^5.0.0"
sentry-sdk = "^1.28.1"
starlette-exporter = "^0.23.0"
tldextract = {version = "^3.2.1"}
uvicorn = {extras = ["standart"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
mypy = "^1.8.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.12"
tomli = "^2.0.1"
types-PyYAML = "^6.0.7"
types-redis = "^4.6.0.3"
types-requests = "^2.27.16"
yamllint = "^1.26.3"
pytest-deadfixtures = "^2.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = 88
known_first_party = ["feed_watchdog"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".cache",
    ".venv",
    "venv",
]

# Strict `@xfail` by default:
xfail_strict = true

asyncio_mode = "auto"

# Extra options:
addopts = [
  # don't add --cov because it breaks pycharm debugger
  #   just add it manaually when needed to cmd args
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov-report=term-missing",
  "--cov-report=xml",
#  "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
source = [
    "bases/feed_watchdog",
    "components/feed_watchdog",
    "development",
    "tests",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "if TYPE_CHECKING:",
]

[tool.mypy]
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
files = ["."]
exclude = [
    "tests/",
]
plugins = ["pydantic.mypy"]
mypy_path = [
    "components",
    "bases",
]

allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_untyped_decorators = false
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
