[tool.poetry]
name = "feed_watchdog_api"
version = "0.1.0"
description = ""
authors = ['yakimka <ss.yakim@gmail.com>']
license = ""

packages = [
    {include = "feed_watchdog/rest_api", from = "../../bases"},
    {include = "feed_watchdog/utils",from = "../../components"},
    {include = "feed_watchdog/sentry",from = "../../components"},
    {include = "feed_watchdog/fetchers",from = "../../components"},
    {include = "feed_watchdog/pubsub",from = "../../components"},
    {include = "feed_watchdog/repositories",from = "../../components"},
    {include = "feed_watchdog/domain",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.1"
dependency-injector = "^4.41.0"
fastapi = "^0.100.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
motor = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^4.6.0"
sentry-sdk = "^1.28.1"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
