[tool.poetry]
name = "feed_watchdog_api"
version = "0.1.0"
description = ""
authors = ['yakimka <ss.yakim@gmail.com>']
license = ""

packages = [
    {include = "feed_watchdog/rest_api", from = "../../bases"},
    {include = "feed_watchdog/workers", from = "../../bases"},
    {include = "feed_watchdog/handlers",from = "../../components"},
    {include = "feed_watchdog/commands",from = "../../components"},
    {include = "feed_watchdog/repositories",from = "../../components"},
    {include = "feed_watchdog/sentry",from = "../../components"},
    {include = "feed_watchdog/migrations",from = "../../components"},
    {include = "feed_watchdog/fetchers",from = "../../components"},
    {include = "feed_watchdog/synchronize",from = "../../components"},
    {include = "feed_watchdog/api_client",from = "../../components"},
    {include = "feed_watchdog/utils",from = "../../components"},
    {include = "feed_watchdog/domain",from = "../../components"},
    {include = "feed_watchdog/text",from = "../../components"},
    {include = "feed_watchdog/pubsub",from = "../../components"},
    {include = "feed_watchdog/http",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.1"
dependency-injector = "^4.41.0"
fastapi = "^0.101.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
motor = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.0"
sentry-sdk = "^1.28.1"
pydantic-settings = "^2.0.2"
aiogram = "^2.20"
apscheduler = "^3.10.4"
dacite = "^1.8.0"
tldextract = "^3.2.1"
pyyaml = "^6.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
feedparser = "^6.0.10"
mongodex = "^0.0.1"
starlette-exporter = "^0.16.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
