[tool.poetry]
name = "feed_watchdog_api"
version = "0.1.0"
description = ""
authors = ['yakimka <ss.yakim@gmail.com>']
license = ""

packages = [
    {include = "feed_watchdog/rest_api", from = "../../bases"},
    {include = "feed_watchdog/workers", from = "../../bases"},
    {include = "feed_watchdog/handlers",from = "../../components"},
    {include = "feed_watchdog/commands",from = "../../components"},
    {include = "feed_watchdog/repositories",from = "../../components"},
    {include = "feed_watchdog/sentry",from = "../../components"},
    {include = "feed_watchdog/migrations",from = "../../components"},
    {include = "feed_watchdog/fetchers",from = "../../components"},
    {include = "feed_watchdog/synchronize",from = "../../components"},
    {include = "feed_watchdog/api_client",from = "../../components"},
    {include = "feed_watchdog/utils",from = "../../components"},
    {include = "feed_watchdog/domain",from = "../../components"},
    {include = "feed_watchdog/text",from = "../../components"},
    {include = "feed_watchdog/pubsub",from = "../../components"},
    {include = "feed_watchdog/http",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.20"
apscheduler = "^3.10.4"
dacite = "^1.8.0"
fastapi = "^0.111.0"
feedparser = "^6.0.10"
httpx = "^0.27.0"
mongodex = "^0.0.1"
motor = "^3.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
picodi = "^0.10.0"
pydantic-settings = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pyyaml = "^6.0"
redis = "^5.0.0"
sentry-sdk = "^2.3.1"
starlette-exporter = "^0.21.0"
tldextract = "^3.2.1"
uvicorn = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
